--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <html class="no-js lt-ie9"> 
 <![endif]-->
 <!--[if gt IE 8]><!-->
-<html dir="ltl">
+<html dir="rtl">
 <!--<![endif]-->
 
 <head>
